src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_var_type_void.deca
// Description:
//    Program testing var declare with type void 
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    void x;
}
